# ollie

./: .gitignore  CMakeLists.txt  INSTALL.txt  Ollie-Design.dia  distclean
cmake/: CxxTestMacros.cmake  FindBoost.cmake
kde/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
src/: Buffer.cpp  Buffer.h  BufferImpl.cpp  BufferImpl.h  BufferImplTests.h  BufferTests.h  ByteArray.h  CMakeLists.txt  File.cpp  File.h  FileTests.h  IOHandle.h  IOHandleTests.h  IOTests.h  Ollie.cpp  PPtrList.hpp  PPtrListTests.h  Page.cpp  Page.h  PageBuffer.cpp  PageBuffer.h  PageBufferTests.h  PageTests.h  asciibuffer.cpp  asciibuffer.h  buffer.cpp  buffer.h  buffertests.h  config.h  cursor.cpp  cursor.h  file.cpp  file.h  filefactory.cpp  filefactory.h  filetests.h  iofactory.cpp  iofactory.h  iohandle.cpp  iohandle.h  (+9 more)
src/cxxtest/: StdValueTraits.h
